--- a/day-2.html
+++ b/day-2.html
@@ -1,3 +1,7 @@
+<!-- View this project on: https://www.w3schools.com/code/tryit.asp?filename=GR46FBDZYTXZ  -->
+
+
+
 <<!DOCTYPE html>
 <html lang="en">
   <head>
