day 25 tailwind done

--- a/DAY 25/day25-tailwind.html
+++ b/DAY 25/day25-tailwind.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div class="bg-white dark:bg-gray-800">
+        <h1 class="text-gray-900 dark:text-white">Tailwind stuff</h1>
+        <p class="text-gray-600 dark:text-gray-300">
+            Testing Dark Mode
+        </p>
+    </div>
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
