--- a/DAY 25/day25.html
+++ b/DAY 25/day25.html
@@ -1,15 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Something with Bootstrap</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Sherl</title>
+    <meta name="description" content="If you know, you know!">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
 </head>
 
-<body>
-
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand" href="#">Sherl</a><button data-bs-toggle="collapse"
+                class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i
+                    class="fa fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item nav-link"><a class="nav-link active" href="#about">KNOW</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="#download">ABOUT</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="#contact">ME</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h1 class="brand-heading">DEVNEST</h1>
+                        <p class="intro-text">Nuuu, you came to visit this!<br>It's created with love &lt;3</p><a
+                            class="btn btn-link btn-circle" role="button" href="#about"><i
+                                class="fa fa-angle-double-down animated"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="text-center content-section" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2>About ME AKA SHERL</h2>
+                    <p>I am really going to open up here or smth but I am a web developer(or I like to call myself so)
+                        and I like writing and reading stuff*.</p>
+                    <p>I like making friends but I don't really like putting in efforts. So if sometimes I get busy
+                        please don't ping me :)</p>
+                    <p>*By reading I meant manga, that too sometimes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="text-center download-section content-section" id="download"
+        style="background-image:url('assets/img/downloads-bg.jpg');">
+        <div class="container">
+            <div class="col-lg-8 mx-auto">
+                <h1>Download MY RESUME MAYBE?</h1>
+                <p>Or not, depends totally on you.</p><button class="btn btn-primary btn-lg btn-default"
+                    type="button">Resume</button>
+            </div>
+        </div>
+    </section>
+    <section class="text-center content-section" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2>Contact ME( or not )</h2>
+                    <p>Feel free to text me but call me at your own risk.</p>
+                    <ul class="list-inline banner-social-buttons">
+                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default"
+                                type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp;
+                                    Google+</span></button></li>
+                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default"
+                                type="button"><i class="fa fa-twitter fa-fw"></i><span
+                                    class="network-name">&nbsp;Twitter</span></button></li>
+                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default"
+                                type="button"><i class="fa fa-github fa-fw"></i><span
+                                    class="network-name">&nbsp;github</span></button></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="map-clean"></div>
+    <footer>
+        <div class="container text-center">
+            <p>Copyright ©&nbsp;Sherl 2021</p>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/grayscale.js"></script>
 </body>
 
 </html>
